--- a/header.css
+++ b/header.css
@@ -4,9 +4,21 @@ body {
 	font-family: arial;
 }
 
+.wall {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
 .header {
 	width: 100%;
 	height: 660px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	background-image: url(./img/img_2.jpg);
 }
 
 .menu {
@@ -52,13 +64,184 @@ body {
 }
 
 .compo {
-	width: 100%;
+	display: flex;
+	flex-direction: row;
+	width: 80%;
 	height: 400px;
-	background-color: #666;
+}
+
+.text {
+	flex-grow: 1;
+}
+
+.compo .text p{
+	font-size: 55px;
+}
+
+.compo .text .btn {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-decoration: none;
+	line-height: 50px;
+	box-sizing: border-box; 
+	color: #FFF;
+	border: solid 1px none;
+	border-radius: 10px;
+	width: 200px;
+	height: 50px;
+	background-color: var(--theme-ui-colors-peach,#F65858);;
+}
+.compo .text .btn:hover {
+	background-color: rgb(247, 112, 112);
+}
+
+@media only screen and (max-width: 900px) {
+  .compo {
+  	display: flex;
+	flex-direction: column;
+  }
 }
 
 .search {
+	margin-top: 50px;
+	width: 78%;
+	height: 80px;
+	box-sizing: border-box;
+	display: flex;
+	align-items: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: #FFF;
+	border-radius: 10px;
+}
+
+input{
+	padding: 14px 0px 14px 0px;
+	margin-top: 2px;
+	width: 400px;
+}
+
+input:focus{
+	outline: none;
+}
+
+.tag {
+	width: 80%;
+	height: 50px;
+}
+
+.addresss {
+	height: 40px;
+}
+
+.searchbtn a{
+	padding-left: 50px;
+	box-sizing: border-box;
+	margin-left: 10px;
+	line-height: 50px;
+	text-decoration: none;
+	display: block;
+	width: 150px;
+	height: 50px;
+	color: rgb(0, 130, 148);
+	border-radius: 7px;
+	border: solid 1px rgb(0, 130, 148);
+}
+
+.searchbtn a:hover {
+	background-color: rgb(0, 130, 148);
+	color: #FFF;
+	transition: all 0.2s;
+}
+
+.content {
+	width: 80%;
+	height: 1500px;
+}
+
+.slide {
+	height: 500px;
+	display: flex;
+	flex-direction: column;
+}
+
+.tagname {
+	display: flex;
 	width: 100%;
-	height: 160px;
-	background-color: #777;
+	height: 100px;
+	line-height: 50px;
+}
+
+h1{
+	flex-grow: 1;
+}
+
+.seeall {
+	line-height: 100px;
+	text-decoration: none;
+	color: #008294;
+}
+
+.seeall:hover {
+	text-decoration: underline;
+}
+
+
+.listitem {
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
+	height: 400px;
+
+}
+
+.props {
+	display: flex;
+	flex-direction: column;
+	width: 250px;
+	height: 100%;
+	border: solid 1px #BBB;
+	border-radius: 10px;
+}
+
+.pic {
+	padding: 0;
+	width: 100%;
+	height: 150px;
+}
+
+.pic img {
+	border-radius: 10px 10px 0 0;
+}
+
+.status {
+	height: 180px;
+	margin-left: 10px;
+	line-height: 0.4;
+	color: #000;
+}
+
+.link {
+	text-decoration: none;
+}
+
+.link:visited {
+	color: black;
+}
+
+.link p {
+	color: #777;
+	font-size: 13px;
+}
+
+.link h5 {
+	font-size: 15px;
+	color: #877457;
+}
+
+.users {
+	background-color: #DDD;
+	height: 70px;
 }
